design: fixed overflow for media sidebars

--- a/src/assets/css/media.scss
+++ b/src/assets/css/media.scss
@@ -21,7 +21,8 @@ iframe.bandcamp-player {
     height: 100vh;
     top: 0;
     z-index: 10;
-    overflow: scroll;
+    // overflow: scroll;
+    overflow: auto;
     opacity: .99;
     .outer {
         // display: inline-block;
